--- a/Baseline_PC.ipynb
+++ b/Baseline_PC.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 160,
    "id": "a496382e-a10b-4da8-bfb1-35f6789ccb51",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "<torch._C.Generator at 0x2ab5f3f5810>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 161,
    "id": "2639159c-4142-40b8-bdd6-0c7a5cd5501f",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 162,
    "id": "bc5a73ab-8b2e-4693-bc94-7090a6b5f4ee",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 163,
    "id": "78b024f8",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 164,
    "id": "a17daf2d",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 165,
    "id": "799402d8",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 5.])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 166,
    "id": "8eefc4a9",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 167,
    "id": "9012f305",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 10, Avg P: -182.4648: 100%|██████████| 10/10 [00:09<00:00,  1.09it/s]\n"
+      "Epoch 10, Avg P: -182.4648: 100%|██████████| 10/10 [00:10<00:00,  1.08s/it]\n"
      ]
     }
    ],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 168,
    "id": "014d3130",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 169,
    "id": "13b81452",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 170,
    "id": "bb1e0b06",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "tensor(1191)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 171,
    "id": "9558ae9b",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "id": "40961bae",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
     "        self.pool = nn.MaxPool2d(2, 2)\n",
     "        self.dropout = nn.Dropout(0.25)\n",
     "\n",
-    "        self.fc1 = nn.Linear(64 * 7 * 7, num_classes)\n",
+    "        self.fc1 = nn.Linear(64 * 7 * 7, 128)\n",
     "        self.fc2 = nn.Linear(128, num_classes)\n",
     "\n",
     "        self.print_size = PrintSize()\n",
@@ -527,6 +527,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "930b4116",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model(\n",
+      "  (conv1): Conv2d(1, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (dropout): Dropout(p=0.25, inplace=False)\n",
+      "  (fc1): Linear(in_features=3136, out_features=10, bias=True)\n",
+      "  (print_size): PrintSize()\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "class PrintSize(nn.Module):\n",
+    "    \"\"\"Utility module to print current shape of a Tensor in Sequential, only at the first pass.\"\"\"\n",
+    "\n",
+    "    first = True\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        if self.first:\n",
+    "            print(f\"Size: {x.size()}\")\n",
+    "            self.first = False\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "class Model(nn.Module):\n",
+    "    def __init__(self, num_classes = 10):\n",
+    "        super(Model, self).__init__()\n",
+    "\n",
+    "        self.conv1 = nn.Conv2d(1, 32, 3, padding = 1)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, 3, padding = 1)\n",
+    "\n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.dropout = nn.Dropout(0.25)\n",
+    "\n",
+    "        self.fc1 = nn.Linear(64 * 7 * 7, num_classes)\n",
+    "\n",
+    "        self.print_size = PrintSize()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "\n",
+    "      x = self.dropout(self.pool(F.relu(self.conv1(x.float()))))\n",
+    "      x = self.dropout(self.pool(F.relu(self.conv2(x))))\n",
+    "\n",
+    "      x = self.print_size(x)\n",
+    "\n",
+    "      x = x.view(x.size(0), -1)\n",
+    "      x = self.fc1(x)\n",
+    "\n",
+    "      return x\n",
+    "    \n",
+    "    def return_hidden(self, x):\n",
+    "      x = self.dropout(self.pool(F.relu(self.conv1(x.float()))))\n",
+    "      x = self.dropout(self.pool(F.relu(self.conv2(x))))\n",
+    "\n",
+    "      x = self.print_size(x)\n",
+    "\n",
+    "      x = x.view(x.size(0), -1)\n",
+    "        \n",
+    "      return x\n",
+    "\n",
+    "cnn_model = Model(10)\n",
+    "device = torch.device('cpu')  # use cuda or cpu\n",
+    "cnn_model.to(device)\n",
+    "print(cnn_model)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fe86c1e8",
    "metadata": {},
@@ -536,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 174,
    "id": "cb018a83",
    "metadata": {},
    "outputs": [
@@ -545,16 +621,16 @@
      "output_type": "stream",
      "text": [
       "Size: torch.Size([64, 64, 7, 7])\n",
-      "Epoch 1/10, Training Loss: 0.8080, Validation Loss: 0.3093, Validation Accuracy: 91.40%\n",
-      "Epoch 2/10, Training Loss: 0.2746, Validation Loss: 0.2031, Validation Accuracy: 93.30%\n",
-      "Epoch 3/10, Training Loss: 0.1939, Validation Loss: 0.1688, Validation Accuracy: 94.35%\n",
-      "Epoch 4/10, Training Loss: 0.1496, Validation Loss: 0.1432, Validation Accuracy: 95.30%\n",
-      "Epoch 5/10, Training Loss: 0.1282, Validation Loss: 0.1251, Validation Accuracy: 95.65%\n",
-      "Epoch 6/10, Training Loss: 0.1071, Validation Loss: 0.1134, Validation Accuracy: 95.90%\n",
-      "Epoch 7/10, Training Loss: 0.0914, Validation Loss: 0.1169, Validation Accuracy: 96.10%\n",
-      "Epoch 8/10, Training Loss: 0.0809, Validation Loss: 0.1171, Validation Accuracy: 96.10%\n",
-      "Epoch 9/10, Training Loss: 0.0676, Validation Loss: 0.0964, Validation Accuracy: 96.85%\n",
-      "Epoch 10/10, Training Loss: 0.0660, Validation Loss: 0.1089, Validation Accuracy: 96.60%\n"
+      "Epoch 1/10, Training Loss: 0.7579, Validation Loss: 0.3439, Validation Accuracy: 90.25%\n",
+      "Epoch 2/10, Training Loss: 0.2529, Validation Loss: 0.2420, Validation Accuracy: 92.55%\n",
+      "Epoch 3/10, Training Loss: 0.1698, Validation Loss: 0.2179, Validation Accuracy: 92.60%\n",
+      "Epoch 4/10, Training Loss: 0.1334, Validation Loss: 0.1826, Validation Accuracy: 94.55%\n",
+      "Epoch 5/10, Training Loss: 0.1095, Validation Loss: 0.1440, Validation Accuracy: 95.45%\n",
+      "Epoch 6/10, Training Loss: 0.0961, Validation Loss: 0.1330, Validation Accuracy: 95.45%\n",
+      "Epoch 7/10, Training Loss: 0.0815, Validation Loss: 0.1232, Validation Accuracy: 96.10%\n",
+      "Epoch 8/10, Training Loss: 0.0696, Validation Loss: 0.1434, Validation Accuracy: 95.50%\n",
+      "Epoch 9/10, Training Loss: 0.0637, Validation Loss: 0.1229, Validation Accuracy: 96.05%\n",
+      "Epoch 10/10, Training Loss: 0.0570, Validation Loss: 0.1173, Validation Accuracy: 96.55%\n"
      ]
     }
    ],
@@ -616,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 175,
    "id": "d2bcf8c1",
    "metadata": {},
    "outputs": [],
@@ -626,17 +702,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 176,
    "id": "741fed90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xtrain_mixed = final_conv_out"
+    "Xtrain_mixed = final_conv_out\n",
+    "Xtrain_mixed = Xtrain_mixed > 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 177,
    "id": "2dec1845",
    "metadata": {},
    "outputs": [
@@ -647,7 +724,7 @@
       "CategoricalLeaf()\n",
       "Sequential(\n",
       "  (0): MultiLeaf(\n",
-      "    (0): NormalLeaf()\n",
+      "    (0): BernoulliLeaf()\n",
       "    (1): CategoricalLeaf()\n",
       "  )\n",
       "  (1): Weightsum()\n",
@@ -666,7 +743,7 @@
     "classes = 10  # Number of output classes (e.g., digits 0-9)\n",
     "\n",
     "# Define individual leaf distributions\n",
-    "input_leaf = NormalLeaf(T, V, C)         # Gaussian for pixel inputs\n",
+    "input_leaf = BernoulliLeaf(T, V, C)         # Gaussian for pixel inputs\n",
     "output_leaf = CategoricalLeaf(T, 1, C, 10)  # Categorical for class labels\n",
     "\n",
     "\n",
@@ -685,18 +762,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 178,
    "id": "bd4948c4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([4.6036e-03, 0.0000e+00, 2.2697e-01,  ..., 0.0000e+00, 3.8790e-02,\n",
-       "        5.0000e+00], grad_fn=<SelectBackward0>)"
+       "tensor([1., 1., 1.,  ..., 0., 0., 5.])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 179,
    "id": "7fd11b50",
    "metadata": {},
    "outputs": [
@@ -734,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 180,
    "id": "49db3672",
    "metadata": {},
    "outputs": [
@@ -742,23 +818,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 20, Avg P: 5493.6955: 100%|██████████| 20/20 [01:16<00:00,  3.83s/it]\n"
+      "Epoch 10, Avg P: -1032.0397: 100%|██████████| 10/10 [00:40<00:00,  4.09s/it]\n"
      ]
     }
    ],
    "source": [
     "mixed_model.train()\n",
-    "tp.utils.model.train(mixed_model, [concatenated], device = device, epochs = 20, show_progress=True)"
+    "tp.utils.model.train(mixed_model, [concatenated], device = device, epochs = 10, show_progress=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 181,
    "id": "55566244",
    "metadata": {},
    "outputs": [],
    "source": [
     "Xtest_mixed = cnn_model.return_hidden(Xtest.view(-1, 1, 28, 28))\n",
+    "Xtest_mixed = Xtest_mixed > 0\n",
     "empty_y = torch.zeros(Xtest_mixed.shape[0])\n",
     "empty_y[:] = float('nan')\n",
     "concatenated_test = torch.cat((Xtest_mixed.float(), empty_y[:,None]), dim =1)"
@@ -766,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 182,
    "id": "919277f3",
    "metadata": {},
    "outputs": [
@@ -798,17 +875,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 183,
    "id": "1a493053",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(525)"
+       "tensor(1150)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
